Устанавливаем библиотеку для работы с очередями composer require enqueue/enqueue-bundle и транспорт для RabbitMQ: composer require enqueue/amqp-lib

--- a/php/.env
+++ b/php/.env
@@ -18,3 +18,7 @@
 APP_ENV=dev
 APP_SECRET=26e07f04b7659928fcbc00f6d24a9b9f
 ###< symfony/framework-bundle ###
+
+###> enqueue/enqueue-bundle ###
+ENQUEUE_DSN=null://
+###< enqueue/enqueue-bundle ###
