--- a/php/composer.json
+++ b/php/composer.json
@@ -7,14 +7,14 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "enqueue/amqp-lib": "^0.10.9",
+        "enqueue/enqueue-bundle": "^0.10.16",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/yaml": "6.0.*"
-    },
-    "require-dev": {
     },
     "config": {
         "allow-plugins": {
