Отправка в очередь и получение сообщения из очереди

--- a/php/.env
+++ b/php/.env
@@ -20,5 +20,5 @@ APP_SECRET=26e07f04b7659928fcbc00f6d24a9b9f
 ###< symfony/framework-bundle ###
 
 ###> enqueue/enqueue-bundle ###
-ENQUEUE_DSN=null://
+ENQUEUE_DSN=amqp://bitrix:bitrix@stack-rabbitmq:5672
 ###< enqueue/enqueue-bundle ###
