--- a/php/config/services.yaml
+++ b/php/config/services.yaml
@@ -22,3 +22,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    send_message_processor:
+        class: App\Consumer\SendDataConsumer
+        tags:
+            - name: enqueue.processor
+              topic: my.topic
+              queue: my.queue
