Убрал автоматический созданный APP_SECRET

--- a/php/.env
+++ b/php/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=26e07f04b7659928fcbc00f6d24a9b9f
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> enqueue/enqueue-bundle ###
